[package]
name = "dnd_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { git = "https://github.com/pfa230/teloxide", features = ["macros", "cache-me", "throttle"], branch = "master"}
log = "0.4"
rand = "0.8.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt", "rt-multi-thread", "macros"] }
lambda_http = "0.12.0"
lambda_runtime = { version = "0.12.0" }
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.120"
anyhow = "1.0.86"
aws-sdk-s3 = "1.41.0"
aws-config = "1.5.4"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }

